@@ -1,3 +1,8 @@
+2005-01-29	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-toolbars-view.c(exo_toolbars_view_context_menu), po/de.po,
+	  po/libexo.pot: Better texts for the toolbar style chooser menu.
+
 2005-01-27	Benedikt Meurer <benny@xfce.org>
 
 	* m4/, configure, Makefile.in, debian/, depcomp, docs/Makefile.in,
